src/scss/recit/_navbar.scss
#recitNavbarTop{
    max-width: $page-max-width;
    min-height:  $top-navbar-height;
    margin: auto;
    padding-left: .5rem;
    padding-right: .5rem;
    .site-name {margin-left: .5rem;}

    .navbar-nav{ 
        align-items: baseline;    
        
        .nav-link{
           min-width: 50px;
        }
        .nav-item-divider{width: 90%; height: 25px; border-right: none; border-bottom: 1px solid #666; border-right: none; margin-right: 0; margin-bottom: 1rem; align-self: center;}        
    }

    .dropdown-menu{
        right: 0;
        left: auto;
    }

    .show-onmobile{display: inline;}

    .nav-link{
        i.fa {
            font-size: 1.1rem;
        }
    }
    
    .popover-region-toggle {
        width: inherit;
        text-align: center;
        padding-left: .8rem;
        padding-right: .8rem;
        font-size: 19px;

        .count-container {
            height: 18px;
            width: 18px;
            border-radius: 9px;
            line-height: 15px;

            &::before {
                content: "";
                top: -11px;
                right: -11px;
                position: absolute;
                height: 40px;
                width: 40px;
                z-index: 10;
                border: 5px solid #fc4b6c;
                border-radius: 20px;
                @include vendor('animation', 'heartbit 1s ease-out');
                @include vendor('animation-iteration-count', 'infinite');
            }
        }
    }
    
    @media screen and (min-width: 992px){
        .navbar-nav{ 
            .nav-item-divider{width: 2px; height: 25px; border-right: 1px solid #666; margin-bottom: 0rem; margin-right: 1rem; display: flex; align-self: center;}
        }

        .show-onmobile{display: none;}
    }
}

nav.navbar {
    max-height: inherit; // min-content does not work with firefox;
}

.userloggedinas {
    nav.navbar ul.navbar-nav .usermenu {
        line-height: 35px;

        .usertext .meta.viewingas {
            line-height: initial;
        }

        .userbutton .avatars .realuser {
            padding-top: 10px;
        }
    }
}

